Added supplementary information.

--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -126,24 +126,43 @@ Surfaces}}
 \begin{document}
 \maketitle
 
-\vspace{80mm}
+\vspace{20mm}
 
-\textsuperscript{1\(\dagger\)}
+Marino Korlević\textsuperscript{1\(*\)}, Marsej
+Markovski\textsuperscript{1}, Zihao Zhao\textsuperscript{2}, Gerhard J.
+Herndl\textsuperscript{2,3}, Mirjana Najdek\textsuperscript{1}
 
-\vspace{40mm}
+1. Center for Marine Research, Ruđer Bošković Institute, Croatia
 
-\(\dagger\) To whom correspondence should be addressed:
+2. Department of Functional and Evolutionary Ecology, University of
+Vienna, Austria
+
+3. Department of Marine Microbiology and Biogeochemistry, Royal
+Netherlands Institute for Sea Research, Utrecht University, The
+Netherlands
+
+\textsuperscript{\(*\)}To whom correspondence should be addressed:
+
+Marino Korlević
+
+G. Paliaga 5, 52210 Rovinj, Croatia
+
+Tel.: +385 52 804 768
+
+Fax: +385 52 804 780
+
+e-mail:
 \href{mailto:marino.korlevic@irb.hr}{\nolinkurl{marino.korlevic@irb.hr}}
 
-1. Ruđer Bošković Institute, Center for Marine Research, G. Paliaga 5,
-Rovinj, Croatia
+Running title: DNA and protein isolation from macrophyte surfaces
 
-2. University of Vienna, Department of Limnology and Bio-Oceanography,
-Althanstraße 14, Vienna, Austria \newpage \linenumbers
-\sisetup{mode=text} \setlength\parindent{24pt}
+\newpage
+\linenumbers
+\sisetup{mode=text}
+\setlength\parindent{24pt}
 
-\hypertarget{abstract}{%
-\subsection{Abstract}\label{abstract}}
+\hypertarget{summary}{%
+\subsection{Summary}\label{summary}}
 
 \newpage
 
@@ -219,10 +238,16 @@ marine macrophytes: the seagrass \emph{Cymodocea nodosa} and the alga
 efficiency of the protocol and the suitability of obtained DNA and
 proteins for 16S rRNA sequencing and metaproteomics.
 
+\hypertarget{results}{%
+\subsection{Results}\label{results}}
+
+\hypertarget{discussion}{%
+\subsection{Discussion}\label{discussion}}
+
 \newpage
 
-\hypertarget{materials-and-methods}{%
-\subsection{Materials and Methods}\label{materials-and-methods}}
+\hypertarget{experimental-procedures}{%
+\subsection{Experimental procedures}\label{experimental-procedures}}
 
 \hypertarget{sampling}{%
 \subsubsection{Sampling}\label{sampling}}
@@ -247,7 +272,7 @@ sections. Leaves and thalli were washed three times with sterile
 artificial seawater (ASW) to remove loosely attached microbial cells.
 
 \hypertarget{dna-isolation}{%
-\subsubsection{DNA Isolation}\label{dna-isolation}}
+\subsubsection{DNA isolation}\label{dna-isolation}}
 
 The DNA was isolated according to the protocol for isolation from
 filters described in Massana \emph{et al.} (1997). This protocol was
@@ -281,7 +306,7 @@ resuspended in 100 \si{\ul} of deionized water.
 
 \hypertarget{illumina-16s-rrna-sequencing}{%
 \subsubsection{Illumina 16S rRNA
-Sequencing}\label{illumina-16s-rrna-sequencing}}
+sequencing}\label{illumina-16s-rrna-sequencing}}
 
 An aliquot of isolated DNA was treated with RNase A (final concentration
 200 \si{\ug\per\ml}) for 2 \si{\hour} at 37 \si{\degreeCelsius}. The DNA
@@ -325,7 +350,7 @@ European Nucleotide Archive (ENA) under accession numbers \textbf{TO BE
 ADDED LATER!}.
 
 \hypertarget{sequence-analysis}{%
-\subsubsection{Sequence Analysis}\label{sequence-analysis}}
+\subsubsection{Sequence analysis}\label{sequence-analysis}}
 
 Obtained sequences were analyzed on the computer cluster Isabella
 (University Computing Center, University of Zagreb) using mothur
@@ -361,7 +386,7 @@ together with the samples yielded only 2 sequences after sequence
 quality curation.
 
 \hypertarget{protein-isolation}{%
-\subsubsection{Protein Isolation}\label{protein-isolation}}
+\subsubsection{Protein isolation}\label{protein-isolation}}
 
 Proteins were isolated according to the protocol for isolation from soil
 described in Chourey \emph{et al.} (2010) and modified by Hultman
@@ -421,7 +446,7 @@ quantification, a chromatographic peak area-based free quantitative
 method was applied.
 
 \hypertarget{confocal-microscopy}{%
-\subsubsection{Confocal Microscopy}\label{confocal-microscopy}}
+\subsubsection{Confocal microscopy}\label{confocal-microscopy}}
 
 Host leaves and thalli from DNA and protein isolation steps were washed
 seven times in deionized water and fixed with formaldehyde (final
@@ -434,12 +459,6 @@ saline (PBS) and ethanol (1:1) and stored at \num{-20}
 \si{\degreeCelsius}. Treated and untreated leaves and thalli segments
 were stained in a 2 × solution of SYBR Green I and examined under a
 Leica TCS SP8 X FLIM confocal microscope (Leica Microsystems, Germany).
-
-\hypertarget{results}{%
-\subsection{Results}\label{results}}
-
-\hypertarget{discussion}{%
-\subsection{Discussion}\label{discussion}}
 
 \hypertarget{acknowledgements}{%
 \subsection{Acknowledgements}\label{acknowledgements}}
@@ -695,8 +714,9 @@ Syntax.
 
 }
 
-\caption{Confocal microscope images of \textit{Cymodocea nodosa} and \textit{Caulerpa cylindracea} surfaces from different locations (Saline, Funtana-Invaded and Funtana-Noninvaded) sampled on 4 December 2017 and stained with SYBR Green I. Scale bar in all images is 60 \si{\um}.\label{micro_dec}}\label{fig:unnamed-chunk-2}
+\caption{Confocal microscope images of \textit{C. nodosa} and \textit{C. cylindracea} surfaces from the Bay of Saline and the Bay of Funtana (Mixed and Monospecific Settlements) sampled on 4 December 2017 and stained with SYBR Green I. Scale bar in all images is 60 \si{\um}.\label{micro_dec}}\label{fig:unnamed-chunk-2}
 \end{figure}
+
 \newpage
 \begin{figure}[ht]
 
@@ -704,8 +724,9 @@ Syntax.
 
 }
 
-\caption{Confocal microscope images of \textit{Cymodocea nodosa} and \textit{Caulerpa cylindracea} surfaces from different locations (Funtana-Invaded and Funtana-Noninvaded) sampled on 19 June 2018 and stained with SYBR Green I. Scale bar in all images is 60 \si{\um}.\label{micro_jun}}\label{fig:unnamed-chunk-3}
+\caption{Confocal microscope images of \textit{C. nodosa} and \textit{C. cylindracea} surfaces from the Bay of Funtana (Mixed and Monospecific Settlements) sampled on 19 June 2018 and stained with SYBR Green I. Scale bar in all images is 60 \si{\um}.\label{micro_jun}}\label{fig:unnamed-chunk-3}
 \end{figure}
+
 \newpage
 \begin{figure}[ht]
 
@@ -713,7 +734,7 @@ Syntax.
 
 }
 
-\caption{Taxonomic classification and relative contribution of the most abundant bacterial sequences from surfaces of two marine macrophytes (\textit{Cymodocea nodosa} and \textit{Caulerpa cylindracea}) sampled in different locations (Saline, Funtana-Invaded and Funtana-Noninvaded) and in two contrasting seasons (4 December 2017 and 19 June 2018).\label{community}}\label{fig:unnamed-chunk-4}
+\caption{Taxonomic classification and relative contribution of the most abundant (> 1 \si{\percent}) bacterial and archaeal sequences from surfaces of two marine macrophytes (\textit{C. nodosa} and \textit{C. cylindracea}) sampled in the Bay of Saline and the Bay of Funtana (Mixed and Monospecific Settlements) and in two contrasting seasons (4 December 2017 and 19 June 2018).\label{community}}\label{fig:unnamed-chunk-4}
 \end{figure}
 
 
