--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -436,7 +436,7 @@ instructions and sequenced on a Q Exactive Hybrid Quadrupole-Orbitrap
 Mass Spectrometer (Thermo Fisher Scientific, USA). Obtained MS/MS
 spectra were searched against a protein database from metagenomic
 assembly published in Burke and Peter Steinberg \emph{et al.} (2011)
-using SEQUEST-HIT engines and validated with Percolator in Proteome
+using SEQUEST-HT engines and validated with Percolator in Proteome
 Discoverer 2.1 (Thermo Fisher Scientific, USA). The target-decoy
 approach was used to reduce the probability of false peptide
 identification. Results whose false discovery rate at the peptide level
